Fix tests, add logo to catalogue